# OBSEqui2Fisheye

./: CMakeLists.txt  README.md  build-test.sh
.github/workflows/: release.yml
build-test/: CMakeCache.txt  Makefile  cmake_install.cmake  obsconfig.h
build-test/obs-equi2fisheye.plugin/Contents/: Info.plist
data/effects/: equi2fisheye-test.effect  equi2fisheye.effect
src/: obs-equi2fisheye.c
